--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Baseball Scoreboard</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="scoreboard">
+        <header class="header">
+            <div class="team home">
+                <div class="logo">Logo</div>
+                <div class="team-name">Home Team Name</div>
+            </div>
+            <div class="score-section">
+                <div class="score">SCORE</div>
+                <div class="bases">
+                    <div class="base">⚪</div>
+                    <div class="base">⚪</div>
+                    <div class="base">⚪</div>
+                </div>
+                <div class="status">
+                    <div>Balls: ⚪⚪⚪</div>
+                    <div>Strikes: ⚪⚪</div>
+                    <div>Outs: ⚪⚪</div>
+                </div>
+            </div>
+            <div class="team visitor">
+                <div class="team-name">Visiting Team Name</div>
+            </div>
+        </header>
+        <div class="lineup">
+            <h2>Lineup</h2>
+            <ol>
+                <li>Name (#) Position</li>
+                <li>Name (#) Position</li>
+                <li>Name (#) Position</li>
+                <li>Name (#) Position</li>
+                <li>Name (#) Position</li>
+                <li>Name (#) Position</li>
+                <li>Name (#) Position</li>
+                <li>Name (#) Position</li>
+                <li>Name (#) Position</li>
+                <li>Name (#) Position</li>
+            </ol>
+        </div>
+        <div class="field">
+            <img src="field.png" alt="Baseball Field">
+        </div>
+        <div class="pitcher-batter">
+            <div class="pitcher">
+                <h3>Pitcher's Name</h3>
+                <p># of Pitches thrown this game</p>
+            </div>
+            <div class="batter">
+                <h3>Batter's Name</h3>
+                <p># of Hits vs. # At Bats</p>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
